--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -313,9 +313,42 @@
     "customWorkers": "カスタム Workers",
     "scheduledTriggers": "スケジュールトリガー",
     "appTriggers": "アプリトリガー",
-    "limitsExceeded": "チャットの制限に達しました（{current}/{limit}）。プランをアップグレードしてもっとチャットを作成しよう。",
+    "limitsExceeded": "チャットの制限に達しました。プランをアップグレードしてもっとチャットを作成しよう。",
     "agentInitiatedSuccessfully": "エージェントが正常に開始されました",
-    "aiAssistantReady": "AIアシスタントがヘルプの準備ができています"
+    "aiAssistantReady": "AIアシスタントがヘルプの準備ができています",
+    "greetings": {
+      "morning": [
+        "おはようございます！今日の予定は？",
+        "おはよう！何を作る？",
+        "おはようございます！準備はOK？"
+      ],
+      "afternoon": [
+        "こんにちは！何かお手伝いしましょうか？",
+        "調子はどう？何をする？"
+      ],
+      "evening": [
+        "こんばんは！夜遅くまでお疲れ様！",
+        "こんばんは！今夜は何に取り組む？",
+        "こんばんは！さあ、始めよう。"
+      ],
+      "random": [
+        "お帰りなさい！",
+        "やあ！Kortixに何でも聞いてね",
+        "何を達成したい？",
+        "すごいものを作ろう",
+        "いつでも準備OK！",
+        "何かある？",
+        "お任せを！ミッションは？",
+        "魔法をかけよう",
+        "どんな挑戦に挑む？",
+        "何でも言って",
+        "今日の計画は？",
+        "シートベルト締めて！どこへ行く？",
+        "今日も一日頑張ろう",
+        "何を考えてる？",
+        "さあ、始めよう！"
+      ]
+    }
   },
   "thread": {
     "integrations": "統合",
