--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -313,9 +313,42 @@
     "customWorkers": "自定义 Workers",
     "scheduledTriggers": "计划触发器",
     "appTriggers": "应用触发器",
-    "limitsExceeded": "你已达到聊天限制（{current}/{limit}）。升级你的计划以创建更多聊天。",
+    "limitsExceeded": "你已达到聊天限制。升级你的计划以创建更多聊天。",
     "agentInitiatedSuccessfully": "智能体启动成功",
-    "aiAssistantReady": "你的 AI 助手已准备好帮助"
+    "aiAssistantReady": "你的 AI 助手已准备好帮助",
+    "greetings": {
+      "morning": [
+        "早上好！今天有什么计划？",
+        "早安！今天想做什么？",
+        "早上好！准备好大干一场了吗？"
+      ],
+      "afternoon": [
+        "下午好！需要什么帮助？",
+        "下午好！接下来做什么？"
+      ],
+      "evening": [
+        "晚上好！还在加班吗？",
+        "晚上好！今晚在做什么？",
+        "晚上好！开始吧。"
+      ],
+      "random": [
+        "欢迎回来！",
+        "嘿！Kortix能为你做什么？",
+        "你想完成什么？",
+        "让我们创造点厉害的东西",
+        "随时准备好！",
+        "有什么新鲜事？",
+        "随时待命！任务是什么？",
+        "让我们创造奇迹",
+        "今天挑战什么？",
+        "你的愿望就是我的命令",
+        "有什么计划？",
+        "系好安全带！去哪里？",
+        "新的一天，新的项目",
+        "在想什么？",
+        "出发吧！"
+      ]
+    }
   },
   "thread": {
     "integrations": "集成",
