--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -478,6 +478,8 @@
     "search": "Search...",
     "searchConversations": "Search chats",
     "searchAgents": "Search workers",
+    "searchWorkers": "Search workers",
+    "searchTriggers": "Search triggers",
     "imageGeneration": "Describe the image you want to create...",
     "imageWithStyle": "Describe your {{style}} image...",
     "slidesGeneration": "What presentation do you need?",
@@ -605,7 +607,7 @@
     "creditPackages": "Credit Packages",
     "choosePackageBoost": "Choose a package and boost your credit balance",
     "ranOutOfCredits": "You ran out of credits. Upgrade now.",
-    "getStarted": "Get Started", 
+    "getStarted": "Get Started",
     "upgradeNow": "Upgrade Now",
     "downgrade": "Downgrade",
     "switchPlan": "Switch Plan",
@@ -702,7 +704,7 @@
     "accountWillBeDeleted": "Your account will be permanently deleted",
     "whatWillBeDeleted": "What Will Be Deleted",
     "allAgents": "All your agents and agent versions",
-    "allThreads": "All your threads and conversations", 
+    "allThreads": "All your threads and conversations",
     "allCredentials": "All your credentials and integrations",
     "subscriptionData": "Your subscription and billing data",
     "gracePeriod": "30-Day Grace Period",
