--- a/apps/mobile/locales/ja.json
+++ b/apps/mobile/locales/ja.json
@@ -485,7 +485,9 @@
     "balanceAfter": "残高（取引後）",
     "noDescription": "説明なし",
     "popular": "人気",
-    "subscription": "サブスクリプション"
+    "subscription": "サブスクリプション",
+    "subscriptionDisclaimerIos": "購入確認時にApple IDアカウントに請求されます。サブスクリプションは自動的に更新されますが、現在の期間終了の24時間以上前に自動更新をオフにしない限り、自動更新されます。現在の期間終了の24時間以内に更新のための請求が行われます。購入後、App Storeのアカウント設定に移動して、サブスクリプションを管理およびキャンセルできます。",
+    "subscriptionDisclaimerAndroid": "購入確認時にGoogleアカウントに請求されます。サブスクリプションは自動的に更新されますが、現在の期間終了の24時間以上前に自動更新をオフにしない限り、自動更新されます。Google Playストアに移動して、サブスクリプションを管理およびキャンセルできます。"
   },
   "theme": {
     "title": "外観",
