--- a/apps/mobile/locales/de.json
+++ b/apps/mobile/locales/de.json
@@ -492,7 +492,9 @@
     "balanceAfter": "Guthaben danach",
     "noDescription": "Keine Beschreibung",
     "popular": "Beliebt",
-    "subscription": "Abonnement"
+    "subscription": "Abonnement",
+    "subscriptionDisclaimerIos": "Die Zahlung wird zu deinem Apple ID-Konto zum Zeitpunkt der Bestätigung des Kaufs belastet. Das Abonnement verlängert sich automatisch, es sei denn, die automatische Verlängerung wird mindestens 24 Stunden vor Ende des aktuellen Zeitraums deaktiviert. Dein Konto wird für die Verlängerung innerhalb von 24 Stunden vor Ende des aktuellen Zeitraums belastet. Du kannst deine Abonnements verwalten und kündigen, indem du zu den Kontoeinstellungen im App Store nach dem Kauf gehst.",
+    "subscriptionDisclaimerAndroid": "Die Zahlung wird zu deinem Google-Konto zum Zeitpunkt der Bestätigung des Kaufs belastet. Das Abonnement verlängert sich automatisch, es sei denn, die automatische Verlängerung wird mindestens 24 Stunden vor Ende des aktuellen Zeitraums deaktiviert. Du kannst deine Abonnements verwalten und kündigen, indem du zum Google Play Store gehst."
   },
   "theme": {
     "title": "Aussehen",
